[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2021"

[dev-dependencies]
periodically = {version = "0.1.0", path = "../periodically", features = ["full"]}
tokio = {version = "1", features = ["full"] }

[[example]]
name = "basic-sync"
path = "basic_sync.rs"

[[example]]
name = "basic-async"
path = "basic_async.rs"