[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2021"

[dev-dependencies]
env_logger = {version = "0.11"}
log = {version = "0.4"}
periodically = {version = "0.2.0", path = "../periodically"}
tokio = {version = "1", features = ["full"] }

[[example]]
name = "basic-sync"
path = "basic_sync.rs"

[[example]]
name = "basic-async"
path = "basic_async.rs"
