[package]
name = "periodically"
version = "0.1.0"
edition = "2021"
authors = ["David Collard <davidcollardprofessional@gmail.com"]
license-file = "LICENSE"
keywords = ["periodic", "cron", "job"]
categories = ["concurrency"]
description = "A library for running tasks on a schedule"
repository = "https://github.com/DavidCollard/periodically"
readme = "README.md"

[dependencies]
backoff = {version = "0.4.0", optional = true}
chrono = {version = "0.4.38", optional = true}
cron = {version = "0.12.1", optional = true}
tokio = {version = "*", features = ["rt", "time"], optional = true}

[features]
default = ["tokio", "cron", "backoff"]
full = ["tokio", "cron", "backoff"]
tokio = ["dep:tokio"]
cron = ["dep:cron", "dep:chrono"]
backoff = ["dep:backoff"]

