[package]
name = "periodically"
version = "0.2.0"
edition = "2021"
authors = ["David Collard <davidcollardprofessional@gmail.com"]
license-file = "LICENSE"
keywords = ["periodic", "cron", "job"]
categories = ["concurrency"]
description = "A library for running tasks on a schedule"
repository = "https://github.com/DavidCollard/periodically"
readme = "README.md"

[dependencies]
backoff = {version = "0.4.0", optional = true}
chrono = {version = "0.4.38", optional = true}
cron = {version = "0.12.1", optional = true}
log = {version = "0.4.22", optional = true}
tokio = {version = "1.39.3", features = ["rt", "time"], optional = true}

[features]
default = ["tokio", "log"]
full = ["tokio", "log", "cron", "backoff"]

backoff = ["dep:backoff"]
cron = ["dep:cron", "dep:chrono"]
log = ["dep:log"]
tokio = ["dep:tokio"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
